syntax = "proto3";

package sc.v1;

import "google/api/annotations.proto";
import "khttp/middleware.proto";
import "validate/validate.proto";
import "google/api/field_behavior.proto";

option go_package = "codo-cnmp/pb;pb";

service StorageClass {
  // 查看-云原生管理-StorageClass-列表
  rpc ListStorageClass (ListStorageClassRequest) returns (ListStorageClassResponse) {
    option (google.api.http) = {
      get: "/api/v1/storageclass/list"
    };
    option (github.ccheers.pggh.khttp.middleware) = {
      names: []
    };
  }
}

message ListStorageClassRequest {
  // 集群名称
  string cluster_name = 1 [(validate.rules).string.min_len = 1, (google.api.field_behavior) = REQUIRED];
  // 查询关键字
  string keyword = 4;
  // 页码
  uint32 page = 5;
  // 页大小
  uint32 page_size = 6;
  // 查询全部
  uint32  list_all = 7[json_name = "list_all"];
}


message StorageClassItem {
  // 名称
  string name = 1 [(validate.rules).string.min_len = 1, (google.api.field_behavior) = REQUIRED];
  // 创建时间
  uint64 create_time = 2 [(google.api.field_behavior) = REQUIRED];
  // 是否关注
  bool is_followed = 3 [json_name = "is_follow", (google.api.field_behavior) = REQUIRED];
  // yaml
  string yaml = 4 [(google.api.field_behavior) = REQUIRED];
  // 来源
  string provisioner = 5 [(google.api.field_behavior) = REQUIRED];
  // 回收策略
  string reclaim_policy = 6 [(google.api.field_behavior) = REQUIRED];
  // 绑定模式
  string volume_binding_mode = 7 [(google.api.field_behavior) = REQUIRED];
  // 是否默认
  bool is_default = 8 [(google.api.field_behavior) = REQUIRED];
}

message ListStorageClassResponse {
  // 总数
  uint32 total = 1;
  // 列表
  repeated StorageClassItem list = 2;
}